# camara-lectro

./: README.md  main.py  pyproject.toml  scan_logs.xlsx
docs/: index.html  style.css
docs/plans/: 2024-02-03-barcode-scanner.md
src/: main.py
src/scanner/: camera.py  decoder.py  exporter.py  products.py  ui.py
tests/: test_scanner.py
