[project]
name = "git-antigravity-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fpdf2>=2.8.5",
    "opencv-python>=4.13.0.90",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "pyzbar>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
